@@ -3764,143 +3764,3 @@ plot
         [ mkplot(np.abs(mean), 'abs(mean)'),
           mkplot(stdev,        'stdev'),
           mkplot(count,        'count', cbrange = (0, 20)) ]
-
-
-def apply_color_map(array, a_min = None, a_max = None):
-    r'''Color-code an array
-
-SYNOPSIS
-
-    image = produce_data()
-
-    print( image.shape )
-    ===>
-    (480, 640)
-
-    image_colorcoded = mrcal.apply_color_map(image)
-
-    print( image_colorcoded.shape )
-    ===>
-    (480, 640, 3)
-
-    print( image_colorcoded.dtype )
-    ===>
-    dtype('uint8')
-
-    mrcal.save_image('data.png', image_colorcoded)
-
-This is very similar to cv2.applyColorMap() but more flexible in several
-important ways. Differences:
-
-- Supports arrays of any shape. Most of the time the input is 2-dimensional
-  images, but this isn't required
-
-- Supports any input data type, NOT limited to 8-bit images like
-  cv2.applyColorMap()
-
-- Does not support MATLAB color maps. At this time only one color map is
-  supported (the default Gnuplot color map). Other gnuplot color maps will be
-  supported in the future.
-
-The color map is applied to each value in the input, each one producing an BGR
-row of shape (3,). So output.shape is input.shape + (3,).
-
-The output has dtype=numpy.uint8, so these arrays can be output as images, and
-visualized using any image-viewing tools.
-
-At this time only one color map is supported: the default color map used by
-gnuplot. Support for others will be added in the future.
-
-ARGUMENTS
-
-- array: input numpy array
-
-- a_min: optional value indicating the lower bound of the values we color map.
-  All input values outside of the range [a_min,a_max] are clipped. If omitted, I
-  use array.min()
-
-- a_max: optional value indicating the upper bound of the values we color map.
-  All input values outside of the range [a_min,a_max] are clipped. If omitted, I
-  use array.max()
-
-RETURNED VALUE
-
-The color-mapped output array of shape array.shape + (3,) and containing 8-bit
-unsigned integers. The last row is the BGR color-mapped values.
-
-    '''
-
-    # I implement gnuplot's default 7,5,15 mapping. This means that the red
-    # channel uses function 7, the green channel uses function 5 and the blue
-    # channel uses function 15, and so on.
-    #
-    # In gnuplot "show palette" displays the current gnuplot settings and "test
-    # palette" displays the palette. The function definitions are given by "show
-    # palette rgbformulae":
-    #
-    #     > show palette rgbformulae
-    #      * there are 37 available rgb color mapping formulae:
-    #         0: 0               1: 0.5             2: 1
-    #         3: x               4: x^2             5: x^3
-    #         6: x^4             7: sqrt(x)         8: sqrt(sqrt(x))
-    #         9: sin(90x)       10: cos(90x)       11: |x-0.5|
-    #        12: (2x-1)^2       13: sin(180x)      14: |cos(180x)|
-    #        15: sin(360x)      16: cos(360x)      17: |sin(360x)|
-    #        18: |cos(360x)|    19: |sin(720x)|    20: |cos(720x)|
-    #        21: 3x             22: 3x-1           23: 3x-2
-    #        24: |3x-1|         25: |3x-2|         26: (3x-1)/2
-    #        27: (3x-2)/2       28: |(3x-1)/2|     29: |(3x-2)/2|
-    #        30: x/0.32-0.78125 31: 2*x-0.84       32: 4x;1;-2x+1.84;x/0.08-11.5
-    #        33: |2*x - 0.5|    34: 2*x            35: 2*x - 0.5
-    #        36: 2*x - 1
-    #      * negative numbers mean inverted=negative colour component
-    #      * thus the ranges in `set pm3d rgbformulae' are -36..36
-
-    if a_min is None: a_min = array.min()
-    if a_max is None: a_max = array.max()
-
-    # write each slice into out[...,0], out[...,1], out[...,2]
-    # I can do this with this Python code intead:
-    #
-    #   x = np.clip( (array.astype(float) - a_min) / (a_max - a_min),
-    #            0, 1 )
-    #   def clip_and_convert(x):
-    #       return np.clip(x*255, 0, 255).round().astype(np.uint8)
-    #   out[..., 0] = clip_and_convert(np.sin(x * 2.*np.pi)) # B: function 15
-    #   out[..., 1] = clip_and_convert(np.sin(x*x*x))        # G: function 5
-    #   out[..., 2] = clip_and_convert(np.sqrt(x))           # R: function 7
-    #
-    # This this is slower (creates more temporaries), and currently (Sun Mar 5
-    # 14:48:28 PST 2023, python3-numpy=1:1.24.1-2) the np.clip() call in
-    # clip_and_convert() spin my CPU, and never exit when I do this:
-    #
-    #   D=~/projects/mrcal-doc-external/2022-11-05--dtla-overpass--samyang--alpha7/stereo;
-    #   Dout=~/projects/mrcal-doc-external/figures/stereo
-    #   PYTHONPATH=~/projects/mrcal;
-    #   export PYTHONPATH;
-    #   $PYTHONPATH/mrcal-stereo         \
-    #     --az-fov-deg 170               \
-    #     --az0-deg    10                \
-    #     --el-fov-deg 95                \
-    #     --el0-deg    -15               \
-    #     --disparity-range 0 30         \
-    #     --sgbm-p1 600                  \
-    #     --sgbm-p2 2400                 \
-    #     --sgbm-uniqueness-ratio 5      \
-    #     --sgbm-disp12-max-diff  1      \
-    #     --sgbm-speckle-window-size 100 \
-    #     --sgbm-speckle-range 2         \
-    #     --force-grayscale              \
-    #     --clahe                        \
-    #     --outdir /tmp \
-    #     $D/[01].cameramodel            \
-    #     $D/[01].jpg
-    #
-    # I don't care enough to debug it, so I make it work and more efficient in
-    # the same time by doing this in C
-    return \
-        mrcal._mrcal_npsp._clip_float_into_bgr_colormap_functions_15_5_7(
-          # no copies made if not needed
-          np.ascontiguousarray(array.astype(float, copy=False)),
-          a_min = a_min,
-          a_max = a_max)
